# learngit

./: .gitignore
src/motioncontrol/: CMakeLists.txt
src/motioncontrol/ecucomm/: CMakeLists.txt  package.xml
src/motioncontrol/ecucomm/config/: config.yaml  configmulti.xml
src/motioncontrol/ecucomm/include/: AnalysisECU.h  ECUDataOutPut.h
src/motioncontrol/ecucomm/launch/: ecucomm_nodes.launch  start_all_nodes.launch
src/motioncontrol/ecucomm/src/: getecudata.cpp  masternode.cpp  sendecudata.cpp
src/motioncontrol/ecucomm/src/ecu/: AnalysisECU.cpp  ECUDataOutPut.cpp
src/motioncontrol/ecucomm/src/util/: NOTATION.hh  ToXml.hh  common.h
src/motioncontrol/manual_gui/: CMakeLists.txt  package.xml  setup.py
src/motioncontrol/manual_gui/cfg/: Demo.params
src/motioncontrol/manual_gui/include/: manual_gui_core.hpp
src/motioncontrol/manual_gui/launch/: manual_gui_node.launch
src/motioncontrol/manual_gui/src/manual_gui/: manual_gui_core.cpp  manual_gui_node.cpp
src/motioncontrol/udp_car/: CMakeLists.txt  package.xml  udpcar.cpp  udpcar.hpp
src/motioncontrol/udp_car/launch/: udp_car_node.launch
src/msgs/finalogm_msgs/: CMakeLists.txt  package.xml
src/msgs/finalogm_msgs/msg/: FinalOGM.msg
src/msgs/plan2control_msgs/msg/: Traj_Node.msg
